# Explain2Me-Framework-Example

./: .gitignore  .pdm.toml  README.md  analyzing_results.html  data.dvc  dvc.yaml  entropy.html  index.html  install-quarto.sh  models.dvc  noise.html  params.yaml  pyproject.toml  robots.txt  running_models.html  salience.html  salience.ipynb  search.json  settings.ini  sitemap.xml
.dvc/: config
Explain2Me_Framework_Example/: _modidx.py
dvc_plots/: index.html
eval/: metrics.json
nbs/: 00_Running_Models.ipynb  01_Analyzing_Results.ipynb  02_Example.ipynb  entropy.ipynb  index.ipynb  nbdev.yml  noise.ipynb  salience.ipynb
scripts/: .gitignore  00_Running_Models.py
