[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "dvc>=2.46.0",
    "nbdev>=2.3.12",
    "torch>=1.13.1",
    "torchvision>=0.6.0",
    "torchcam>=0.3.1",
    "opencv-python>=4.7.0.72",
    "nbconvert>=7.2.9",
]
requires-python = ">=3.9"
license = {text = "MIT"}